--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.profiles.include=oauth
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.h2.console.enabled=true
+
+# ????? ??? ??
+spring.datasource.schema: classpath:h2/schema.sql
+# ????? ??
+spring.datasource.data: classpath:h2/data.sql
+# ?? ??? ?? ?? always : ?? ??? ?? schema, data ?? ??
+spring.datasource.initialization-mode=always
