서버 재시작시 스키마 자동생성 해제위해 ddl-auto 옵션 validate로 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.profiles.include=oauth
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+# \uC2A4\uD0A4\uB9C8 \uC790\uB3D9\uC0DD\uC131 \uC635\uC158 \uC124\uC815
+spring.jpa.hibernate.ddl-auto=validate
 spring.h2.console.enabled=true
 
-# ????? ??? ??
+# \uD14C\uC2A4\uD2B8
 spring.datasource.schema: classpath:h2/schema.sql
 # ????? ??
 spring.datasource.data: classpath:h2/data.sql
