한입 웹사이트 개발을 위한 레이아웃템플릿 분리 설정

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,7 +2,8 @@ spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.h2.console.enabled=true
 spring.session.store-type=jdbc
-
+spring.mustache.prefix=classpath:/templates/hanip/
+spring.mustache.suffix=.mustache
 # Test OAuth
 
 spring.security.oauth2.client.registration.google.client-id=test
