--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.profiles.include=oauth
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.mustache.prefix=classpath:/templates/hanip/
+spring.mustache.suffix=.mustache
 # \uC2A4\uD0A4\uB9C8 \uC790\uB3D9\uC0DD\uC131 \uC635\uC158 \uC124\uC815
 spring.jpa.hibernate.ddl-auto=validate
 spring.h2.console.enabled=true
