개발용 더미데이터 생성설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.mustache.suffix=.mustache
 spring.jpa.hibernate.ddl-auto=validate
 spring.h2.console.enabled=true
 
-spring.datasource.schema: classpath:h2/schema.sql
-spring.datasource.data: classpath:h2/data.sql
+spring.datasource.schema=classpath:h2/schema.sql
+spring.datasource.data=classpath:h2/data.sql
 spring.datasource.initialization-mode=always
